<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/marsala"
        android:gravity="center"
        android:text="@string/recipe_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/text_recipe_name"
        app:layout_constraintStart_toStartOf="@id/text_recipe_name"
        app:layout_constraintTop_toBottomOf="@+id/text_recipe_name">

        <ImageView
            android:id="@+id/image_time"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_time"
            app:layout_constraintEnd_toStartOf="@+id/image_calories"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/marsala" />

        <ImageView
            android:id="@+id/image_calories"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_time"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yellow" />

        <TextView
            android:id="@+id/text_time_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_description"
            app:layout_constraintEnd_toEndOf="@id/image_time"
            app:layout_constraintStart_toStartOf="@id/image_time"
            app:layout_constraintTop_toBottomOf="@id/image_time" />

        <TextView
            android:id="@+id/text_calories_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_description"
            app:layout_constraintEnd_toEndOf="@id/image_calories"
            app:layout_constraintStart_toStartOf="@id/image_calories"
            app:layout_constraintTop_toBottomOf="@id/image_calories" />

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_calories_description" />

        <TextView
            android:id="@+id/textv_long_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/long_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_1" />

        <TextView
            android:id="@+id/text_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ingredients"
            android:textColor="@color/dark_red"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textv_long_text" />

        <ImageView
            android:id="@+id/image_arrow_1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_right_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ingredients"
            app:tint="@color/red" />

        <ImageView
            android:id="@+id/image_arrow_2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_right_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_arrow_1"
            app:tint="@color/red" />

        <ImageView
            android:id="@+id/image_arrow_3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_right_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_arrow_2"
            app:tint="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_amount_1"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_arrow_1"
            app:layout_constraintStart_toEndOf="@id/image_arrow_1"
            app:layout_constraintTop_toTopOf="@id/image_arrow_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_amount_2"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_arrow_2"
            app:layout_constraintStart_toEndOf="@id/image_arrow_2"
            app:layout_constraintTop_toTopOf="@id/image_arrow_2" />

        <TextView
            android:id="@+id/text_recipe_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_amount_3"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_arrow_3"
            app:layout_constraintStart_toEndOf="@id/image_arrow_3"
            app:layout_constraintTop_toTopOf="@id/image_arrow_3" />

        <TextView
            android:id="@+id/text_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/rate_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_recipe_3" />

        <ImageView
            android:id="@+id/image_like"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_thumb"
            app:layout_constraintEnd_toStartOf="@+id/image_dislike"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rate"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/image_dislike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_thumb_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_like"
            app:layout_constraintTop_toTopOf="@+id/image_like"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/text_rate_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rate_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_like" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_red"
            android:text="@string/clear"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rate_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Switch
        android:id="@+id/switch_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>